tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/spec/table-9-0.stderr
TOML parse error at line 5, column 1
  |
5 | [fruit.apple]  # INVALID
  | ^
invalid table header
duplicate key `apple` in table `fruit`
